src/test/ui/feature-gates/feature-gate-never_type.stderr
error[E0658]: The `!` type is experimental (see issue #35121)
  --> $DIR/feature-gate-never_type.rs:7:17
   |
LL | type Ma = (u32, !, i32);
   |                 ^
   |
   = help: add #![feature(never_type)] to the crate attributes to enable

error[E0658]: The `!` type is experimental (see issue #35121)
  --> $DIR/feature-gate-never_type.rs:8:20
   |
LL | type Meeshka = Vec<!>;
   |                    ^
   |
   = help: add #![feature(never_type)] to the crate attributes to enable

error[E0658]: The `!` type is experimental (see issue #35121)
  --> $DIR/feature-gate-never_type.rs:9:24
   |
LL | type Mow = &'static fn(!) -> !;
   |                        ^
   |
   = help: add #![feature(never_type)] to the crate attributes to enable

error[E0658]: The `!` type is experimental (see issue #35121)
  --> $DIR/feature-gate-never_type.rs:10:27
   |
LL | type Skwoz = &'static mut !;
   |                           ^
   |
   = help: add #![feature(never_type)] to the crate attributes to enable

error[E0658]: The `!` type is experimental (see issue #35121)
  --> $DIR/feature-gate-never_type.rs:13:16
   |
LL |     type Wub = !;
   |                ^
   |
   = help: add #![feature(never_type)] to the crate attributes to enable

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0658`.
